actually fixed home vertical align issue

--- a/index.css
+++ b/index.css
@@ -64,11 +64,12 @@ h1 {
 #home {
     height: 100vh;
     overflow: hidden;
+    padding-top: 0px;
 }
 
 #homeContainer {
     position: relative;
-    top: calc(50%-100px);
+    top: 50%;
     transform: translateY(-50%);
     width: 400px;
     margin: auto;
